# AllergyMenuAssistant

./: .env.example  README-zh.md  README.md  docker-compose.dev.yml  docker-compose.yml
database/: init.sql
line-bot/: Dockerfile  pyproject.toml
line-bot/src/: db_connection.py  main.py  send_analysis.py  user_data_handler.py
menu-analysis/: Dockerfile  pyproject.toml
menu-analysis/src/: db_connection.py  llm.py  main.py  ocr.py  user_data_handler.py
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/src/: main.py  send_anaylsis.py  user_data_handler.py
