[project]
name = "menu-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "fastapi>=0.122.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
